--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.0.5"
 django-crispy-forms = "^1.14.0"
 python-dotenv = "^0.20.0"
 django-model-utils = "^4.2.0"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
