--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-crispy-forms = "^1.14.0"
 python-dotenv = "^0.20.0"
 django-model-utils = "^4.2.0"
 django-filter = "^22.1"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
